test-files/cmd/quick/BadJavaScriptTranslation.sh.stdout
20:31:26.186 INFO  ...ot/js/JavaScriptTranslator.cpp( 233) Loading script: test-files/cmd/slow/tSimple.js
Initialize works!
20:31:26.195 ERROR ...ot/js/JavaScriptTranslator.cpp( 355) Error initializing JavaScript: test-files/cmd/slow/tSimple.js (63) 
    if (translate !== undefined)
    ^ 
ReferenceError: translate is not defined
20:31:26.195 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:31:26.195 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/fouo/hoot-release-ui/hoot/translations
20:31:26.347 INFO  ...ot/js/JavaScriptTranslator.cpp( 233) Loading script: plugins/BadSyntaxTest.js
20:31:26.354 ERROR ...ot/js/JavaScriptTranslator.cpp( 355) Error initializing JavaScript: plugins/BadSyntaxTest.js (4) 
foo is bad.
    ^^ 
SyntaxError: Unexpected identifier
20:31:26.354 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:31:26.354 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/fouo/hoot-release-ui/hoot/translations
20:31:26.519 INFO  ...ot/js/JavaScriptTranslator.cpp( 233) Loading script: test-files/cmd/slow/BadRequire.js
20:31:26.528 ERROR ...ot/js/JavaScriptTranslator.cpp( 355) Error initializing JavaScript: /fouo/hoot-release-ui/hoot/plugins/BadSyntaxTest.js (4) 
foo is bad.
    ^^ 
SyntaxError: Unexpected identifier
20:31:26.528 INFO  ...t/core/io/PythonTranslator.cpp(  68) Initializing Python
20:31:26.528 INFO  ...t/core/io/PythonTranslator.cpp(  99) Python path: translations:PYTHONPATH:/fouo/hoot-release-ui/hoot/translations
